--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             {% for my_page in site.pages %}
-            {% if my_page.title and my_page.title != 'Contact' and my_page.title != 'contact'%}
+			{% if my_page.title and my_page.categories != 'hidden'%}
             <li><a href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a></li>
             {% endif %}
             {% endfor %}
