--- a/css/main.scss
+++ b/css/main.scss
@@ -82,6 +82,18 @@ $baseurl: '{{ site.baseurl }}/images';
 		}
 	}
 
+/* New Styles */
+	a.para {
+		@include vendor('transition', ('color #{_duration(transitions)} ease', 'border-bottom-color #{_duration(transitions)} ease'));
+		border-bottom: none;
+		color: inherit;
+		text-decoration: none;
+
+		&:hover {
+			border-bottom: dotted 1px;
+		}
+	}
+
 	strong, b {
 		color: _palette(fg-bold);
 		font-weight: _font(weight-bold);
