--- a/css/main.scss
+++ b/css/main.scss
@@ -84,11 +84,12 @@ $baseurl: '{{ site.baseurl }}/images';
 
 /* New Styles */
 	a.para {
-		@include vendor('transition', ('color #{_duration(transitions)} ease', 'border-bottom-color #{_duration(transitions)} ease'));
-		border-bottom: none;
-		color: inherit;
-		text-decoration: none;
-
+		border-bottom: dotted 1px transparent;
+		-webkit-transition: border 1000ms ease;
+		-moz-transition: border 1000ms ease;
+		-ms-transition: border 1000ms ease;
+		-o-transition: border 1000ms ease;
+		transition: border 1000ms ease; 
 		&:hover {
 			border-bottom: dotted 1px;
 		}
