--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -27,7 +27,7 @@
     {% endif %}
     {{ thisyear }}
     {% if site.owner %}{{ site.owner }}{% else %}{{ site.title }}{% endif %}</li>
-    <li>Design: <a href="http://html5up.net" target="_blank">HTML5 UP</a></li>
-    <li>Built with: <a href="http://jekyllrb.com" target="_blank">Jekyll</a></li>
+    <li><a href="https://www.chemeng.ucla.edu/" target="_blank">CBE</a></li>
+    <li><a href="http://www.ucla.edu/" target="_blank">UCLA</a></li>
   </ul>
 </footer>
