add lab members

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -23,10 +23,10 @@
     <li>&copy; {% assign thisyear = site.time | date: "%Y" %}
     {% if site.first_published %}
       {% capture diff %}{{ site.first_published | minus:thisyear }}{% endcapture %}
-      {% if diff contains '-' %}{{ site.first_published }},{% endif %}
+      {% if diff contains '-' %}{{ site.first_published }} -{% endif %}
     {% endif %}
     {{ thisyear }}
-    {% if site.owner %}{{ site.owner }}{% else %}{{ site.title }}{% endif %}</li>
+    {% if site.owner %}, {{ site.owner }}{% else %}{{ site.title }}{% endif %}</li>
     <li><a href="https://www.chemeng.ucla.edu/" target="_blank">CBE</a></li>
     <li><a href="http://www.ucla.edu/" target="_blank">UCLA</a></li>
   </ul>
