--- a/css/main.scss
+++ b/css/main.scss
@@ -1688,7 +1688,7 @@ $baseurl: '{{ site.baseurl }}/images';
 	#main {
 		> header {
 			@include padding(5em, 0);
-			@include vendor('background-image', ('linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5))', 'url("#{$baseurl}/banner.jpg")'));
+			@include vendor('background-image', ('linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5))', 'url("#{$baseurl}/skyline.jpg")'));
 			background-attachment: fixed;
 			background-position: center center;
 			background-repeat: no-repeat;
@@ -1893,7 +1893,7 @@ $baseurl: '{{ site.baseurl }}/images';
 
 /* Some left and right padding inside the container */
 	.container {
-		padding: 0 7px;
+		padding: 0.1px 7px;
 	}
 
 /* Clear floats */
@@ -1936,7 +1936,7 @@ $baseurl: '{{ site.baseurl }}/images';
 
 	.row.make-columns > div {
 		display: table; /* IE 11 */
-		padding: 0.5rem;
+		padding: 1rem;
 		width: 100%;
 		-webkit-column-break-inside: avoid; /* Chrome, Safari */
 		page-break-inside: avoid; /* Theoretically FF 20+ */
