chrome, safari, and firefox compatibility

--- a/css/main.scss
+++ b/css/main.scss
@@ -1947,24 +1947,38 @@ $baseurl: '{{ site.baseurl }}/images';
 	.card-columns {		
 		column-break-inside: avoid;
 		@media (min-width: 576px) {
+			-webkit-column-count: 1;
+			-moz-column-count: 1;
 			column-count: 1;
 		}
 		@media (min-width: 768px) {
+			-webkit-column-count: 2;
+			-moz-column-count: 2;
 			column-count: 2;
 		}
 		@media (min-width: 992px) {
+			-webkit-column-count: 3;
+			-moz-column-count: 3;
 			column-count: 3;
 		}
 		@media (min-width: 1200px) {
+			-webkit-column-count: 4;
+			-moz-column-count: 4;
 			column-count: 4;
 		}
 		@media (min-width: 2200px) {
+			-webkit-column-count: 5;
+			-moz-column-count: 5;
 			column-count: 5;
 		}
 		@media (min-width: 3000px) {
+			-webkit-column-count: 6;
+			-moz-column-count: 6;
 			column-count: 6;
 		}
 		@media (min-width: 3900px) {
+			-webkit-column-count: 7;
+			-moz-column-count: 7;
 			column-count: 7;
 		}
 	}
